--- a/css/landing.css
+++ b/css/landing.css
@@ -6,6 +6,7 @@
 body{
     height:100%;
     background-color: white;
+    overflow: hidden;
 }
 
 .container{
@@ -22,9 +23,18 @@ body{
 }
 .right{
     width:70vw;
-    background-color: cadetblue;
+    background-color: rgb(25, 49, 50);
       border-top-left-radius: 300px;
   border-bottom-left-radius: 300px;
+
+}
+.icons{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin-top: 45px;
+    gap:35px;
+    font-size: 25px;
 
 }
 
@@ -45,43 +55,106 @@ body{
 }
 .navbar ul{
     display: flex;
-    gap:100px;
+    gap:90px;
     justify-content: flex-end;
+    align-items: center;
 
 }
+
+
 ul li{
     font-size: 20px;
-    
+     
+   
+}
+.icons a {
+    color: inherit;
+    text-decoration: none;
+    transition: 0.3s ease;
+     text-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+
+}
+.icons a:hover{
+     transform: scale(1.2);
+}
+ul li a{
+     color: white;
+     font-family: "Comic Relief", system-ui;
+     transition: 0.5s ease;
+     display: inline-block;
+}
+ul li a:hover{
+     transform: scale(1.2);
+
 }
 #register{
    border:1px solid white;
    padding: 5px;
+   display: inline-block;
+   color:  rgb(25, 49, 50);
+   background-color: white;
+   width: 100px;
+   text-align: center;
+   border-radius: 5px;
+ 
+   
     
 }
+
+
 ul{
     text-decoration: none;
     list-style-type: none;
 }
+
 #lft_img{
     border-radius: 20px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
+.nav_links a{
+    text-decoration: none;
+}
 .logo{
     padding: 20px;
 }
+
+
+.content_right{
+   display:flex;
+   justify-content: flex-end;
+   align-items: center;
+   
+   margin-left: 200px;
+   margin-top: 100px;
+   
+    
+    font-family: "Chicle", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 80px;
+ color:white;
+  
+    
+}
 #joinlink{
-    font-size: 18px;
     text-decoration: none;
+    font-size: 25px;
+    display: inline-block;
+    margin:180px 50px;
+    color:whitesmoke;
+    font-family: "Comic Relief", system-ui;
+  
+
+}
+.routing_link a{
+      transition: 0.5s ease;
+
+}
+.routing_link a:hover{
+    transform: scale(1.1);
 }
 .routing_link{
     display: flex;
     justify-content: flex-end;
-    margin-top: 75px;
-    margin-right: 100px;
-}
-.content_right{
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 200px;
-    margin-right: 100px;
+
 }
